[package]
name = "sawi-opa-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
wasmtime = "2"
opa-wasm = { git = "https://github.com/matrix-org/rust-opa-wasm", features = [ "loader" ] }
tokio = {version = "1", features = [ "fs", "rt", "net" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
